Добавлены checkbox в секции - Лучшие предложения

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 </head>
 
 <body>
+    <!-- header -->
     <header>
         <div class="wrapper">
             <section class="header">
@@ -268,60 +269,55 @@
                             <div class="best-offer-fieldset-checkbox">
                                 <div class="best-offer-fieldset-checkbox-list">
                                     <div class="best-offer-fieldset-checkbox-item">
-                                        <span class="best-offer-fieldset-checkbox__span"><input type="checkbox" class="best-offer-fieldset-checkbox__ch" checked></span>
-                                        <label class="best-offer-fieldset-checkbox__label">Веранда, терраса, уличное
+                                        <input type="checkbox" id="chbx1" class="best-offer-fieldset-checkbox__ch"></span>
+                                        <label for="chbx1" class="best-offer-fieldset-checkbox__label">Веранда, терраса, уличное
                                             пространство</label>
                                     </div>
                                     <div class="best-offer-fieldset-checkbox-item">
-                                        <span class="best-offer-fieldset-checkbox__span"><input type="checkbox" class="best-offer-fieldset-checkbox__ch"></span>
-                                        <label class="best-offer-fieldset-checkbox__label">Офис</label>
+                                        <input type="checkbox" id="chbx2" class="best-offer-fieldset-checkbox__ch">
+                                        <label for="chbx2" class="best-offer-fieldset-checkbox__label">Офис</label>
                                     </div>
                                     <div class="best-offer-fieldset-checkbox-item">
-                                        <span class="best-offer-fieldset-checkbox__span"><input type="checkbox" class="best-offer-fieldset-checkbox__ch"></span>
-                                        <label class="best-offer-fieldset-checkbox__label">Учебное или мед.
-                                            учреждение</label>
+                                        <input type="checkbox" id="chbx3" class="best-offer-fieldset-checkbox__ch">
+                                        <label for="chbx3" class="best-offer-fieldset-checkbox__label">Учебное или мед. учреждение</label>
                                     </div>
                                     <div class="best-offer-fieldset-checkbox-item">
-                                        <span class="best-offer-fieldset-checkbox__span"><input type="checkbox" class="best-offer-fieldset-checkbox__ch"></span>
-                                        <label class="best-offer-fieldset-checkbox__label">Помещение с
-                                            проектором</label>
+                                        <input type="checkbox" id="chbx4" class="best-offer-fieldset-checkbox__ch">
+                                        <label for="chbx4" class="best-offer-fieldset-checkbox__label">Помещение с проектором</label>
                                     </div>
                                     <div class="best-offer-fieldset-checkbox-item">
-                                        <span class="best-offer-fieldset-checkbox__span"><input type="checkbox" class="best-offer-fieldset-checkbox__ch"></span>
-                                        <label class="best-offer-fieldset-checkbox__label">Стеклянные
-                                            переговорные</label>
+                                        <input type="checkbox" id="chbx5" class="best-offer-fieldset-checkbox__ch">
+                                        <label for="chbx5" class="best-offer-fieldset-checkbox__label">Стеклянные переговорные</label>
                                     </div>
                                     <div class="best-offer-fieldset-checkbox-item">
-                                        <span class="best-offer-fieldset-checkbox__span"><input type="checkbox" class="best-offer-fieldset-checkbox__ch"></span>
-                                        <label class="best-offer-fieldset-checkbox__label">Помещение с панорамными
-                                            окнами</label>
+                                        <input type="checkbox" id="chbx6" class="best-offer-fieldset-checkbox__ch">
+                                        <label for="chbx6" class="best-offer-fieldset-checkbox__label">Помещение с панорамными окнами</label>
                                     </div>
                                 </div>
                                 <div class="best-offer-fieldset-checkbox-list">
                                     <div class="best-offer-fieldset-checkbox-item">
-                                        <span class="best-offer-fieldset-checkbox__span"><input type="checkbox" class="best-offer-fieldset-checkbox__ch"></span>
-                                        <label class="best-offer-fieldset-checkbox__label">Помещение с мансардными
-                                            окнами</label>
+                                        <input type="checkbox" id="chbx7" class="best-offer-fieldset-checkbox__ch">
+                                        <label for="chbx7" class="best-offer-fieldset-checkbox__label">Помещение с мансардными окнами</label>
                                     </div>
                                     <div class="best-offer-fieldset-checkbox-item">
-                                        <span class="best-offer-fieldset-checkbox__span"><input type="checkbox" class="best-offer-fieldset-checkbox__ch"></span>
-                                        <label class="best-offer-fieldset-checkbox__label">Кухня, столовая</label>
+                                        <input type="checkbox" id="chbx8" class="best-offer-fieldset-checkbox__ch">
+                                        <label for="chbx8" class="best-offer-fieldset-checkbox__label">Кухня, столовая</label>
                                     </div>
                                     <div class="best-offer-fieldset-checkbox-item">
-                                        <span class="best-offer-fieldset-checkbox__span"><input type="checkbox" class="best-offer-fieldset-checkbox__ch"></span>
-                                        <label class="best-offer-fieldset-checkbox__label">Детская</label>
+                                        <input type="checkbox" id="chbx9" class="best-offer-fieldset-checkbox__ch">
+                                        <label for="chbx9" class="best-offer-fieldset-checkbox__label">Детская</label>
                                     </div>
                                     <div class="best-offer-fieldset-checkbox-item">
-                                        <span class="best-offer-fieldset-checkbox__span"><input type="checkbox" class="best-offer-fieldset-checkbox__ch"></span>
-                                        <label class="best-offer-fieldset-checkbox__label">Спальня</label>
+                                        <input type="checkbox" id="chbx10" class="best-offer-fieldset-checkbox__ch">
+                                        <label for="chbx10" class="best-offer-fieldset-checkbox__label">Спальня</label>
                                     </div>
                                     <div class="best-offer-fieldset-checkbox-item">
-                                        <span class="best-offer-fieldset-checkbox__span"><input type="checkbox" class="best-offer-fieldset-checkbox__ch"></span>
-                                        <label class="best-offer-fieldset-checkbox__label">Балкон</label>
+                                        <input type="checkbox" id="chbx11" class="best-offer-fieldset-checkbox__ch">
+                                        <label for="chbx11" class="best-offer-fieldset-checkbox__label">Балкон</label>
                                     </div>
                                     <div class="best-offer-fieldset-checkbox-item">
-                                        <span class="best-offer-fieldset-checkbox__span"><input type="checkbox" class="best-offer-fieldset-checkbox__ch"></span>
-                                        <label class="best-offer-fieldset-checkbox__label">Зимний сад</label>
+                                        <input type="checkbox" id="chbx12" class="best-offer-fieldset-checkbox__ch">
+                                        <label for="chbx12" class="best-offer-fieldset-checkbox__label">Зимний сад</label>
                                     </div>
                                 </div>
                             </div>
