--- a/index.html
+++ b/index.html
@@ -10,19 +10,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&family=Inter:wght@100..900&family=PT+Sans&family=Poppins:wght@700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Cormorant+Infant:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap"
         rel="stylesheet">
     <!-- PT Sans -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=PT+Sans&family=Poppins:wght@700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital@0;1&display=swap" rel="stylesheet">
     <!-- Inter -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Infant&family=Inter:wght@100..900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz@0,14..32;1,14..32&display=swap" rel="stylesheet">
     <!-- Стили -->
     <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -269,8 +266,10 @@
                             <div class="best-offer-fieldset-checkbox">
                                 <div class="best-offer-fieldset-checkbox-list">
                                     <div class="best-offer-fieldset-checkbox-item">
-                                        <input type="checkbox" id="chbx1" class="best-offer-fieldset-checkbox__ch"></span>
-                                        <label for="chbx1" class="best-offer-fieldset-checkbox__label">Веранда, терраса, уличное
+                                        <input type="checkbox" id="chbx1"
+                                            class="best-offer-fieldset-checkbox__ch"></span>
+                                        <label for="chbx1" class="best-offer-fieldset-checkbox__label">Веранда, терраса,
+                                            уличное
                                             пространство</label>
                                     </div>
                                     <div class="best-offer-fieldset-checkbox-item">
@@ -279,29 +278,35 @@
                                     </div>
                                     <div class="best-offer-fieldset-checkbox-item">
                                         <input type="checkbox" id="chbx3" class="best-offer-fieldset-checkbox__ch">
-                                        <label for="chbx3" class="best-offer-fieldset-checkbox__label">Учебное или мед. учреждение</label>
+                                        <label for="chbx3" class="best-offer-fieldset-checkbox__label">Учебное или мед.
+                                            учреждение</label>
                                     </div>
                                     <div class="best-offer-fieldset-checkbox-item">
                                         <input type="checkbox" id="chbx4" class="best-offer-fieldset-checkbox__ch">
-                                        <label for="chbx4" class="best-offer-fieldset-checkbox__label">Помещение с проектором</label>
+                                        <label for="chbx4" class="best-offer-fieldset-checkbox__label">Помещение с
+                                            проектором</label>
                                     </div>
                                     <div class="best-offer-fieldset-checkbox-item">
                                         <input type="checkbox" id="chbx5" class="best-offer-fieldset-checkbox__ch">
-                                        <label for="chbx5" class="best-offer-fieldset-checkbox__label">Стеклянные переговорные</label>
+                                        <label for="chbx5" class="best-offer-fieldset-checkbox__label">Стеклянные
+                                            переговорные</label>
                                     </div>
                                     <div class="best-offer-fieldset-checkbox-item">
                                         <input type="checkbox" id="chbx6" class="best-offer-fieldset-checkbox__ch">
-                                        <label for="chbx6" class="best-offer-fieldset-checkbox__label">Помещение с панорамными окнами</label>
+                                        <label for="chbx6" class="best-offer-fieldset-checkbox__label">Помещение с
+                                            панорамными окнами</label>
                                     </div>
                                 </div>
                                 <div class="best-offer-fieldset-checkbox-list">
                                     <div class="best-offer-fieldset-checkbox-item">
                                         <input type="checkbox" id="chbx7" class="best-offer-fieldset-checkbox__ch">
-                                        <label for="chbx7" class="best-offer-fieldset-checkbox__label">Помещение с мансардными окнами</label>
+                                        <label for="chbx7" class="best-offer-fieldset-checkbox__label">Помещение с
+                                            мансардными окнами</label>
                                     </div>
                                     <div class="best-offer-fieldset-checkbox-item">
                                         <input type="checkbox" id="chbx8" class="best-offer-fieldset-checkbox__ch">
-                                        <label for="chbx8" class="best-offer-fieldset-checkbox__label">Кухня, столовая</label>
+                                        <label for="chbx8" class="best-offer-fieldset-checkbox__label">Кухня,
+                                            столовая</label>
                                     </div>
                                     <div class="best-offer-fieldset-checkbox-item">
                                         <input type="checkbox" id="chbx9" class="best-offer-fieldset-checkbox__ch">
@@ -317,7 +322,8 @@
                                     </div>
                                     <div class="best-offer-fieldset-checkbox-item">
                                         <input type="checkbox" id="chbx12" class="best-offer-fieldset-checkbox__ch">
-                                        <label for="chbx12" class="best-offer-fieldset-checkbox__label">Зимний сад</label>
+                                        <label for="chbx12" class="best-offer-fieldset-checkbox__label">Зимний
+                                            сад</label>
                                     </div>
                                 </div>
                             </div>
@@ -350,10 +356,11 @@
                 <div class="footer-up-logo-block">
                     <p class="footer-up-logo-block-descr-logo">LOGO</p>
                     <p class="footer-up-block-links footer-up-logo-block-descr">Москва и МО</p>
-                    <p class="footer-up-block-links footer-up-logo-block-descr">Режим работы: <br> ежедневно с 9:00 до 21:00 </p>
+                    <p class="footer-up-block-links footer-up-logo-block-descr">Режим работы: <br> ежедневно с 9:00 до
+                        21:00 </p>
                     <div class="footer-up-logo-block-descr-numbers">
                         <p class="footer-up-logo-block-descr-numb">8 955 545 23 81</p>
-                        <p class="footer-up-logo-block-descr-numb">8 955 515 21 81</p> 
+                        <p class="footer-up-logo-block-descr-numb">8 955 515 21 81</p>
                     </div>
                 </div>
                 <div class="footer-up-calk-block">
