--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <!-- Inter -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz@0,14..32;1,14..32&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz@0,14..32;1,14..32&display=swap"
+        rel="stylesheet">
     <!-- Стили -->
     <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -97,8 +98,72 @@
                         </div>
                     </div>
                 </div>
+                <section class="menu-section hidden">
+                    <h1 class="menu-section-title">LOGO</h1>
+                    <div class="menu-section-contacts">
+                        <p class="menu-section-descr">Дмитров</p>
+                        <p class="menu-section-descr">8 (925) 645-57-11</p>
+                        <p class="menu-section--descr">8 (499) 999-99-99</p>
+                    </div>
+                    <ul class="menu-section-links">
+                        <li class="menu-section-links_item-shutter">
+                            <a href="#" class="menu-section-links-block">
+                                <img src="./img/svg/icons/shutter.svg" alt="Иконка жалюзи">
+                                <p class="menu-section-descr">Lorem</p>
+                            </a>
+                            <a href="#" class="menu-section-links-block">
+                                <img src="./img/svg/icons/shutter_line.svg" alt="Иконка жалюзи">
+                                <p class="menu-section-descr">Lorem</p>
+                            </a>
+                            <a href="#" class="menu-section-links-block">
+                                <img src="./img/svg/icons/shutter_lab.svg" alt="Иконка жалюзи">
+                                <p class="menu-section-descr">Lorem</p>
+                            </a>
+                            <a href="#" class="menu-section-links-block">
+                                <img src="./img/svg/icons/shutter_garm.svg" alt="Иконка жалюзи">
+                                <p class="menu-section-descr">Lorem</p>
+                            </a>
+                            <a href="#" class="menu-section-links-block">
+                                <img src="./img/svg/icons/shutter_mouse.svg" alt="Иконка жалюзи">
+                                <p class="menu-section-descr">Lorem</p>
+                            </a>
+                            <a href="#" class="menu-section-links-block">
+                                <img src="./img/svg/icons/stall.svg" alt="Иконка жалюзи">
+                                <p class="menu-section-descr">Lorem</p>
+                            </a>
+                            <a href="#" class="menu-section-links-block">
+                                <img src="./img/svg/icons/shutter_cirk.svg" alt="Иконка жалюзи">
+                                <p class="menu-section-descr">Lorem</p>
+                            </a>
+                            <a href="#" class="menu-section-links-block">
+                                <img src="./img/svg/icons/gear.svg" alt="Иконка жалюзи">
+                                <p class="menu-section-descr">Lorem</p>
+                            </a>
+                            <a href="#" class="menu-section-links-block">
+                                <img src="./img/svg/icons/tool.svg" alt="Иконка инструментов">
+                                <p class="menu-section-descr">Lorem</p>
+                            </a>
+                            <a href="#" class="menu-section-links-block">
+                                <img src="./img/svg/icons/calk.svg" alt="Иконка калькулятора">
+                                <p class="menu-section-descr">Калькулятор</p>
+                            </a>
+                        </li>
+                        <li class="menu-section-links__item-search">
+                            <a href="#" class="menu-section-links-block">
+                                <img src="./img/svg/icons/search.svg" alt="Иконка поиска">
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="menu-section-about">
+                        <p class="menu-section-descr">О компании</p>
+                        <p class="menu-section-descr">Отзывы</p>
+                        <p class="menu-section--descr">Коммерческим покупателям</p>
+                        <p class="menu-section--descr">Контакты</p>
+                    </div>
+                </section>
             </section>
         </div>
+
     </header>
     <main>
         <div class="wrapper">
@@ -387,6 +452,8 @@
             </div>
         </div>
     </footer>
+
+    <script src="/js/menu-section.js"></script>
 </body>
 
 </html>
