Стилизовано  всплывающее меню

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
                 <section class="menu-section hidden">
                     <h1 class="menu-section-title">LOGO</h1>
                     <div class="menu-section-contacts">
-                        <p class="menu-section-descr">Дмитров</p>
+                        <p class="menu-section-descr menu-section-descr-city">Дмитров</p>
                         <p class="menu-section-descr">8 (925) 645-57-11</p>
-                        <p class="menu-section--descr">8 (499) 999-99-99</p>
+                        <p class="menu-section-descr">8 (499) 999-99-99</p>
                     </div>
                     <ul class="menu-section-links">
                         <li class="menu-section-links_item-shutter">
@@ -149,16 +149,16 @@
                             </a>
                         </li>
                         <li class="menu-section-links__item-search">
-                            <a href="#" class="menu-section-links-block">
-                                <img src="./img/svg/icons/search.svg" alt="Иконка поиска">
-                            </a>
+                           <div class="menu-section-links__item-search-block">
+                            <input type="text" class="menu-section-links-search-line" placeholder="Поиск">
+                           </div>
                         </li>
                     </ul>
                     <div class="menu-section-about">
                         <p class="menu-section-descr">О компании</p>
                         <p class="menu-section-descr">Отзывы</p>
-                        <p class="menu-section--descr">Коммерческим покупателям</p>
-                        <p class="menu-section--descr">Контакты</p>
+                        <p class="menu-section-descr">Коммерческим покупателям</p>
+                        <p class="menu-section-descr">Контакты</p>
                     </div>
                 </section>
             </section>
