Заменены изображения в секции - Популярное. Добавлены заголовки

--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
                             </a>
                         </li>
                         <li class="menu-section-links__item-search">
-                           <div class="menu-section-links__item-search-block">
-                            <input type="text" class="menu-section-links-search-line" placeholder="Поиск">
-                           </div>
+                            <div class="menu-section-links__item-search-block">
+                                <input type="text" class="menu-section-links-search-line" placeholder="Поиск">
+                            </div>
                         </li>
                     </ul>
                     <div class="menu-section-about">
@@ -173,10 +173,18 @@
                     <h2 class="popular-section-title">Популярное</h2>
                     <div class="popular-section-left">
                         <div class="popular-section-left-img-blocks">
-                            <div class="popular-section-left-img-blocks__item_one"></div>
-                            <div class="popular-section-left-img-blocks__item_two"></div>
-                            <div class="popular-section-left-img-blocks__item_three"></div>
-                            <div class="popular-section-left-img-blocks__item_four"></div>
+                            <div class="popular-section-left-img-blocks__item_one">
+                                <h2 class="popular-section-left-img-blocks_title"><span>Москитные</span> сетки</h2>
+                            </div>
+                            <div class="popular-section-left-img-blocks__item_two">
+                                <h2 class="popular-section-left-img-blocks_title ">lorem</h2>
+                            </div>
+                            <div class="popular-section-left-img-blocks__item_three">
+                                <h2 class="popular-section-left-img-blocks_title popular-section-left-img-blocks_title_italic">lorem</h2>
+                            </div>
+                            <div class="popular-section-left-img-blocks__item_four">
+                                <h2 class="popular-section-left-img-blocks_title popular-section-left-img-blocks_title_white">lorem</h2>
+                            </div>
                         </div>
                     </div>
                     <div class="popular-section-right"></div>
