Сделано наведение на боковой панели

--- a/index.html
+++ b/index.html
@@ -36,43 +36,57 @@
                             <a href="#" class="logo">LOGO</a>
                         </li>
                         <li class="header-menu-list__burger">
-                            <img src="./img/svg/icons/burger.svg" alt="Иконка меню">
+                            <div class="header-menu-links">
+                                <img src="./img/svg/icons/burger.svg" alt="Иконка меню" class="img">
+                                <img src="./img/svg/icons/burgerA.svg" alt="Иконка меню" class="imgH imgHburger">
+                            </div>
                         </li>
                         <li class="header-menu-list__item-shutter">
                             <a href="#" class="header-menu-links">
-                                <img src="./img/svg/icons/shutter.svg" alt="Иконка жалюзи">
+                                <img src="./img/svg/icons/shutter.svg" alt="Иконка жалюзи" class="img">
+                                <img src="./img/svg/icons/shutterA.svg" alt="Иконка жалюзи" class="imgH">
                             </a>
                             <a href="#" class="header-menu-links">
-                                <img src="./img/svg/icons/shutter_line.svg" alt="Иконка жалюзи">
+                                <img src="./img/svg/icons/shutter_line.svg" alt="Иконка жалюзи" class="img">
+                                <img src="./img/svg/icons/shutter_lineA.svg" alt="Иконка жалюзи" class="imgH">
                             </a>
                             <a href="#" class="header-menu-links">
-                                <img src="./img/svg/icons/shutter_lab.svg" alt="Иконка жалюзи">
+                                <img src="./img/svg/icons/shutter_lab.svg" alt="Иконка жалюзи" class="img">
+                                <img src="./img/svg/icons/shutter_labA.svg" alt="Иконка жалюзи" class="imgH">
                             </a>
                             <a href="#" class="header-menu-links">
-                                <img src="./img/svg/icons/shutter_garm.svg" alt="Иконка жалюзи">
+                                <img src="./img/svg/icons/shutter_garm.svg" alt="Иконка жалюзи" class="img">
+                                <img src="./img/svg/icons/shutter_garmA.svg" alt="Иконка жалюзи" class="imgH">
                             </a>
                             <a href="#" class="header-menu-links">
-                                <img src="./img/svg/icons/shutter_mouse.svg" alt="Иконка жалюзи">
+                                <img src="./img/svg/icons/shutter_mouse.svg" alt="Иконка жалюзи" class="img">
+                                <img src="./img/svg/icons/shutter_mouseA.svg" alt="Иконка жалюзи" class="imgH">
                             </a>
                             <a href="#" class="header-menu-links">
-                                <img src="./img/svg/icons/stall.svg" alt="Иконка жалюзи">
+                                <img src="./img/svg/icons/stall.svg" alt="Иконка жалюзи" class="img">
+                                <img src="./img/svg/icons/stallA.svg" alt="Иконка жалюзи" class="imgH">
                             </a>
                             <a href="#" class="header-menu-links">
-                                <img src="./img/svg/icons/shutter_cirk.svg" alt="Иконка жалюзи">
+                                <img src="./img/svg/icons/shutter_cirk.svg" alt="Иконка жалюзи" class="img">
+                                <img src="./img/svg/icons/shutter_cirkA.svg" alt="Иконка жалюзи" class="imgH">
                             </a>
                             <a href="#" class="header-menu-links">
-                                <img src="./img/svg/icons/gear.svg" alt="Иконка жалюзи">
+                                <img src="./img/svg/icons/gear.svg" alt="Иконка жалюзи" class="img">
+                                <img src="./img/svg/icons/gearA.svg" alt="Иконка жалюзи" class="imgH">
                             </a>
                             <a href="#" class="header-menu-links">
-                                <img src="./img/svg/icons/tool.svg" alt="Иконка инструментов">
+                                <img src="./img/svg/icons/tool.svg" alt="Иконка инструментов" class="img">
+                                <img src="./img/svg/icons/toolA.svg" alt="Иконка инструментов" class="imgH">
                             </a>
                             <a href="#" class="header-menu-links">
-                                <img src="./img/svg/icons/calk.svg" alt="Иконка калькулятора">
+                                <img src="./img/svg/icons/calk.svg" alt="Иконка калькулятора" class="img">
+                                <img src="./img/svg/icons/calkA.svg" alt="Иконка калькулятора" class="imgH">
                             </a>
                         </li>
                         <li class="header-menu-list__item-search">
                             <a href="#" class="header-menu-links">
-                                <img src="./img/svg/icons/search.svg" alt="Иконка поиска">
+                                <img src="./img/svg/icons/search.svg" alt="Иконка поиска" class="img">
+                                <img src="./img/svg/icons/searchA.svg" alt="Иконка поиска" class="imgH imgHsearch">
                             </a>
                         </li>
                     </ul>
@@ -180,10 +194,14 @@
                                 <h2 class="popular-section-left-img-blocks_title ">lorem</h2>
                             </div>
                             <div class="popular-section-left-img-blocks__item_three">
-                                <h2 class="popular-section-left-img-blocks_title popular-section-left-img-blocks_title_italic">lorem</h2>
+                                <h2
+                                    class="popular-section-left-img-blocks_title popular-section-left-img-blocks_title_italic">
+                                    lorem</h2>
                             </div>
                             <div class="popular-section-left-img-blocks__item_four">
-                                <h2 class="popular-section-left-img-blocks_title popular-section-left-img-blocks_title_white">lorem</h2>
+                                <h2
+                                    class="popular-section-left-img-blocks_title popular-section-left-img-blocks_title_white">
+                                    lorem</h2>
                             </div>
                         </div>
                     </div>
