Сделано наведение на всплывающее меню

--- a/index.html
+++ b/index.html
@@ -122,43 +122,73 @@
                     <ul class="menu-section-links">
                         <li class="menu-section-links_item-shutter">
                             <a href="#" class="menu-section-links-block">
-                                <img src="./img/svg/icons/shutter.svg" alt="Иконка жалюзи">
+                                <div class="header-menu-links">
+                                    <img src="./img/svg/icons/shutter.svg" alt="Иконка жалюзи" class="img">
+                                    <img src="./img/svg/icons/shutterA.svg" alt="Иконка жалюзи" class="imgH">
+                                </div>
                                 <p class="menu-section-descr">Lorem</p>
                             </a>
                             <a href="#" class="menu-section-links-block">
-                                <img src="./img/svg/icons/shutter_line.svg" alt="Иконка жалюзи">
+                                <div class="header-menu-links">
+                                    <img src="./img/svg/icons/shutter_line.svg" alt="Иконка жалюзи" class="img">
+                                    <img src="./img/svg/icons/shutter_lineA.svg" alt="Иконка жалюзи" class="imgH">
+                                </div>
                                 <p class="menu-section-descr">Lorem</p>
                             </a>
                             <a href="#" class="menu-section-links-block">
-                                <img src="./img/svg/icons/shutter_lab.svg" alt="Иконка жалюзи">
+                                <div class="header-menu-links">
+                                    <img src="./img/svg/icons/shutter_lab.svg" alt="Иконка жалюзи" class="img">
+                                    <img src="./img/svg/icons/shutter_labA.svg" alt="Иконка жалюзи" class="imgH">
+                                </div>
                                 <p class="menu-section-descr">Lorem</p>
                             </a>
                             <a href="#" class="menu-section-links-block">
-                                <img src="./img/svg/icons/shutter_garm.svg" alt="Иконка жалюзи">
+                                <div class="header-menu-links">
+                                    <img src="./img/svg/icons/shutter_garm.svg" alt="Иконка жалюзи" class="img">
+                                    <img src="./img/svg/icons/shutter_garmA.svg" alt="Иконка жалюзи" class="imgH">
+                                </div>
                                 <p class="menu-section-descr">Lorem</p>
                             </a>
                             <a href="#" class="menu-section-links-block">
-                                <img src="./img/svg/icons/shutter_mouse.svg" alt="Иконка жалюзи">
+                                <div class="header-menu-links">
+                                    <img src="./img/svg/icons/shutter_mouse.svg" alt="Иконка жалюзи" class="img">
+                                    <img src="./img/svg/icons/shutter_mouseA.svg" alt="Иконка жалюзи" class="imgH">
+                                </div>
                                 <p class="menu-section-descr">Lorem</p>
                             </a>
                             <a href="#" class="menu-section-links-block">
-                                <img src="./img/svg/icons/stall.svg" alt="Иконка жалюзи">
+                                <div class="header-menu-links">
+                                    <img src="./img/svg/icons/stall.svg" alt="Иконка жалюзи" class="img">
+                                    <img src="./img/svg/icons/stallA.svg" alt="Иконка жалюзи" class="imgH">
+                                </div>
                                 <p class="menu-section-descr">Lorem</p>
                             </a>
                             <a href="#" class="menu-section-links-block">
-                                <img src="./img/svg/icons/shutter_cirk.svg" alt="Иконка жалюзи">
+                                <div class="header-menu-links">
+                                    <img src="./img/svg/icons/shutter_cirk.svg" alt="Иконка жалюзи" class="img">
+                                    <img src="./img/svg/icons/shutter_cirkA.svg" alt="Иконка жалюзи" class="imgH">
+                                </div>
                                 <p class="menu-section-descr">Lorem</p>
                             </a>
                             <a href="#" class="menu-section-links-block">
-                                <img src="./img/svg/icons/gear.svg" alt="Иконка жалюзи">
+                                <div class="header-menu-links">
+                                    <img src="./img/svg/icons/gear.svg" alt="Иконка жалюзи" class="img">
+                                    <img src="./img/svg/icons/gearA.svg" alt="Иконка жалюзи" class="imgH">
+                                </div>
                                 <p class="menu-section-descr">Lorem</p>
                             </a>
                             <a href="#" class="menu-section-links-block">
-                                <img src="./img/svg/icons/tool.svg" alt="Иконка инструментов">
+                                <div class="header-menu-links">
+                                    <img src="./img/svg/icons/tool.svg" alt="Иконка инструментов" class="img">
+                                    <img src="./img/svg/icons/toolA.svg" alt="Иконка инструментов" class="imgH">
+                                </div>
                                 <p class="menu-section-descr">Lorem</p>
                             </a>
                             <a href="#" class="menu-section-links-block">
-                                <img src="./img/svg/icons/calk.svg" alt="Иконка калькулятора">
+                                <div class="header-menu-links">
+                                    <img src="./img/svg/icons/calk.svg" alt="Иконка калькулятора" class="img">
+                                    <img src="./img/svg/icons/calkA.svg" alt="Иконка калькулятора" class="imgH">
+                                </div>
                                 <p class="menu-section-descr">Калькулятор</p>
                             </a>
                         </li>
