Исправлен путь к скриптку menu-section.js

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
         </div>
     </footer>
 
-    <script src="/js/menu-section.js"></script>
+    <script src="./js/menu-section.js"></script>
 </body>
 
 </html>
