Исправлены пути к изображениям в файлу index.html

--- a/index.html
+++ b/index.html
@@ -252,9 +252,9 @@
                             <div class="best-offer-section-card__img best-offer-section-card__img-one">
                                 <div class="best-offer-section-card__img_up">
                                     <div class="best-offer-section-card-characteristic">
-                                        <img src="/img/svg/icons/im_cirk.svg" alt="Иконка характеристик">
-                                        <img src="/img/svg/icons/100proc.svg" alt="Иконка характеристик">
-                                        <img src="/img/svg/icons/230.svg" alt="Иконка характеристик">
+                                        <img src="./img/svg/icons/im_cirk.svg" alt="Иконка характеристик">
+                                        <img src="./img/svg/icons/100proc.svg" alt="Иконка характеристик">
+                                        <img src="./img/svg/icons/230.svg" alt="Иконка характеристик">
                                     </div>
                                     <div class="best-offer-section-card-sale">-10%</div>
                                 </div>
@@ -314,9 +314,9 @@
                             <div class="best-offer-section-card__img best-offer-section-card__img-three">
                                 <div class="best-offer-section-card__img_up">
                                     <div class="best-offer-section-card-characteristic">
-                                        <img src="/img/svg/icons/im_cirk.svg" alt="Иконка характеристик">
-                                        <img src="/img/svg/icons/100proc.svg" alt="Иконка характеристик">
-                                        <img src="/img/svg/icons/230.svg" alt="Иконка характеристик">
+                                        <img src="./img/svg/icons/im_cirk.svg" alt="Иконка характеристик">
+                                        <img src="./img/svg/icons/100proc.svg" alt="Иконка характеристик">
+                                        <img src="./img/svg/icons/230.svg" alt="Иконка характеристик">
                                     </div>
                                     <div class="best-offer-section-card-sale">-10%</div>
                                 </div>
@@ -345,9 +345,9 @@
                             <div class="best-offer-section-card__img best-offer-section-card__img-four">
                                 <div class="best-offer-section-card__img_up">
                                     <div class="best-offer-section-card-characteristic">
-                                        <img src="/img/svg/icons/im_cirk.svg" alt="Иконка характеристик">
-                                        <img src="/img/svg/icons/100proc.svg" alt="Иконка характеристик">
-                                        <img src="/img/svg/icons/230.svg" alt="Иконка характеристик">
+                                        <img src="./img/svg/icons/im_cirk.svg" alt="Иконка характеристик">
+                                        <img src="./img/svg/icons/100proc.svg" alt="Иконка характеристик">
+                                        <img src="./img/svg/icons/230.svg" alt="Иконка характеристик">
                                     </div>
                                     <div class="best-offer-section-card-sale">-10%</div>
                                 </div>
